--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,1 @@
-compile.on.save=false
-do.depend=false
-do.jar=true
-file.reference.emma.jar=C:\\Users\\Lassi\\Documents\\NetBeansProjects\\EvoluutioOhHa\\coverage\\coverage.emma
-javac.debug=true
-javadoc.preview=true
-user.properties.file=/cs/fs/home/lvapaaka/.netbeans/7.2.1/build.properties
+user.properties.file=C:\\Users\\Lassi\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
